[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/T_parallax_1.png" type="Texture" id=1]
[ext_resource path="res://levels/TilingGround.gd" type="Script" id=2]

[node name="TilingGround" type="Node2D"]
script = ExtResource( 2 )
size = 1920.0
speed = 100.0

[node name="Ground1" type="TextureRect" parent="."]
margin_right = 1920.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground2" type="TextureRect" parent="."]
margin_left = 1920.0
margin_right = 3840.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ground3" type="TextureRect" parent="."]
margin_left = 3838.0
margin_right = 5758.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}
